--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -46,19 +46,36 @@ jobs:
       run: npm run build
       working-directory: ./frontend
 
-    - name: ls working dir
-      run: ls frontend
-        
-    #- name: Set up Docker Buildx
-    #  uses: docker/setup-buildx-action@v2
+    - name: ls
+      run: ls ./frontend
 
-    #- name: Build and push
-    #  uses: docker/build-push-action@v4
-    #  with:
-    #      context: .
-    #      file: ./backend/Dockerfile
-    #      load: true
-    #      tags: my-base-image:latest
+    - name: Add frontend build to wwwroot
+      run: |
+        rm ./backend/BusinessCalendar.WebAPI/wwwroot/*
+        cp -R ./frontend/dist/* ./backend/BusinessCalendar.WebAPI/wwwroot
+      
+    #- name: ls
+    #  run: ls ./backend/BusinessCalendar.WebAPI/wwwroot
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: https://ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+          context: ./backend
+          file: ./backend/BusinessCalendar.WebAPI/Dockerfile
+          push: true
+          tags: | 
+            ghcr.io/myzamaraev/businesscalendar:latest
+            ghcr.io/myzamaraev/businesscalendar:0.1
 
       
     # Runs a single command using the runners shell
