add Dockerfile for web API

--- a/BusinessCalendar.WebAPI/BusinessCalendar.WebAPI.csproj
+++ b/BusinessCalendar.WebAPI/BusinessCalendar.WebAPI.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +17,12 @@
   <ItemGroup>
     <ProjectReference Include="..\BusinessCalendar.Domain\BusinessCalendar.Domain.csproj" />
     <ProjectReference Include="..\BusinessCalendar.MongoDb\BusinessCalendar.MongoDb.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="..\.dockerignore">
+      <Link>.dockerignore</Link>
+    </Content>
   </ItemGroup>
 
 </Project>
