--- a/BusinessCalendar.WebAPI/appsettings.json
+++ b/BusinessCalendar.WebAPI/appsettings.json
@@ -5,9 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "MongoDB": {
     "ConnectionURI": "mongodb://localhost:27018",
-    "DatabaseName": "BusinessCalendar"
+    "DatabaseName": "BusinessCalendar",
+    "HealthTimeoutSeconds": 3
   }
 }
