--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,25 @@ services:
     image: mongo:6.0.4
     ports:
       - 27018:27017
+    volumes:
+      - mongo:/data/db
       
   web-api:
     image: ${DOCKER_REGISTRY-}businesscalendar-webapi
     build:
       context: .
       dockerfile: BusinessCalendar.WebAPI/Dockerfile
+    environment:
+      MongoDB__ConnectionURI: "mongodb://mongodb:27017"
     ports:
       - 4080:80
+
+  web-api-prod-image:
+    image: "ghcr.io/myzamaraev/businesscalendar:0.1"
+    environment:
+      MongoDB__ConnectionURI: "mongodb://mongodb:27017"
+    ports:
+      - 4081:80
+        
+volumes:
+  mongo:
