--- a/.gitignore
+++ b/.gitignore
@@ -387,6 +387,9 @@ FodyWeavers.xsd
 !.vscode/extensions.json
 *.code-workspace
 
+# Rider files
+.idea/*
+
 # Local History for Visual Studio Code
 .history/
 
