Get rid of BusinesCalendar.Contracts, sign BusinessCalendar.Client with strong name

--- a/BusinessCalendar.Client/BusinessCalendar.Client.csproj
+++ b/BusinessCalendar.Client/BusinessCalendar.Client.csproj
@@ -2,11 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>sgKey.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\BusinessCalendar.Contracts\BusinessCalendar.Contracts.csproj" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
