--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -7,12 +7,11 @@ name: Manual workflow
 on:
   workflow_dispatch:
     # Inputs the workflow accepts.
-    #inputs:
-    #  version:
-    #    description: 'Version'
-    #    #default: '1.0'
-    #    required: true
-    #    type: string
+    inputs:
+      version:
+        description: 'Version'
+        required: true
+        type: string
 
 jobs:
   build:
