--- a/.github/workflows/publish_service.yml
+++ b/.github/workflows/publish_service.yml
@@ -1,18 +1,12 @@
-# This is a basic workflow that is manually triggered
-
-name: Manual workflow
-
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
+name: Publish Service
 on:
   workflow_dispatch:
-    # Inputs the workflow accepts.
     inputs:
       version:
         description: 'Version'
+        default: "1.0"
         required: true
         type: string
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -50,12 +44,9 @@ jobs:
 
     - name: Add frontend build to wwwroot
       run: |
-        rm ./backend/BusinessCalendar.WebAPI/wwwroot/*
-        cp -R ./frontend/dist/* ./backend/BusinessCalendar.WebAPI/wwwroot
+        rm ./backend/Src/BusinessCalendar.WebAPI/wwwroot/*
+        cp -R ./frontend/dist/* ./backend/Src/BusinessCalendar.WebAPI/wwwroot
       
-    #- name: ls
-    #  run: ls ./backend/BusinessCalendar.WebAPI/wwwroot
-    
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
@@ -69,14 +60,9 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v4
       with:
-          context: ./backend
-          file: ./backend/BusinessCalendar.WebAPI/Dockerfile
+          context: ./backend/Src
+          file: ./backend/Src/BusinessCalendar.WebAPI/Dockerfile
           push: true
           tags: | 
             ghcr.io/myzamaraev/businesscalendar:latest
-            ghcr.io/myzamaraev/businesscalendar:0.1
-
-      
-    # Runs a single command using the runners shell
-    #- name: Send greeting
-    #  run: echo "Hello ${{ inputs.version }}"
+            ghcr.io/myzamaraev/businesscalendar:${{inputs.version}}
