--- a/Src/BusinessCalendar.WebAPI/docker-compose.yml
+++ b/Src/BusinessCalendar.WebAPI/docker-compose.yml
@@ -6,18 +6,18 @@ services:
     volumes:
       - mongo:/data/db
       
-  web-api:
-    image: ${DOCKER_REGISTRY-}businesscalendar-webapi
-    build:
-      context: ..
-      dockerfile: Dockerfile
-    environment:
-      MongoDB__ConnectionURI: "mongodb://mongodb:27017"
-    ports:
-      - 4080:80
+#  web-api:
+#    image: ${DOCKER_REGISTRY-}businesscalendar-webapi
+#    build:
+#      context: ..
+#      dockerfile: Dockerfile
+#    environment:
+#      MongoDB__ConnectionURI: "mongodb://mongodb:27017"
+#    ports:
+#      - 4080:80
 
   web-api-prod-image:
-    image: "ghcr.io/myzamaraev/businesscalendar:0.1"
+    image: "ghcr.io/myzamaraev/businesscalendar:latest"
     environment:
       MongoDB__ConnectionURI: "mongodb://mongodb:27017"
     ports:
