add BusinessCalendar.Client package metadata

--- a/Src/BusinessCalendar.Client/BusinessCalendar.Client.csproj
+++ b/Src/BusinessCalendar.Client/BusinessCalendar.Client.csproj
@@ -1,13 +1,52 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>sgKey.snk</AssemblyOriginatorKeyFile>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <SignAssembly>true</SignAssembly>
+        <AssemblyOriginatorKeyFile>sgKey.snk</AssemblyOriginatorKeyFile>
+        <AssemblyVersion>1.0.0.0</AssemblyVersion>
+        <FileVersion>1.0.0</FileVersion>
 
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
+        <VersionPrefix>1.0.0</VersionPrefix>
+        
+        <Title>BusinessCalendar.Client</Title>
+        <Authors>Mikhail Zamaraev</Authors>
+        <Description>.Net client for BusinessCalendar Web API</Description>
+        <Copyright>Copyright © Mikhail Zamaraev 2023</Copyright>
+        <RepositoryUrl>https://github.com/myzamaraev/BusinessCalendar</RepositoryUrl>
+        <PackageId>BusinessCalendar.Client</PackageId>
+        <PackageTags>Calendar,Business,State</PackageTags>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageIcon>PackageIcon.png</PackageIcon>
+        
+        <MinClientVersion>2.12</MinClientVersion>
+        <GenerateDocumentationFile>True</GenerateDocumentationFile>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <EnablePackageValidation>true</EnablePackageValidation>
+        <PackageValidationBaselineVersion>1.0.0</PackageValidationBaselineVersion>
+    </PropertyGroup>
+
+    <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
+        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Remove="**\*.orig"/>
+        <!--    <None Include="..\..\LICENSE.md" Pack="true" PackagePath="LICENSE.md" />-->
+        <None Include="PackageIcon.png" Pack="true" PackagePath="\"/>
+        <None Include="README.md" Pack="true" PackagePath="\" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All"/>
+    </ItemGroup>
 
 </Project>
