--- a/.github/workflows/publish_client.yml
+++ b/.github/workflows/publish_client.yml
@@ -1,14 +1,9 @@
-# This is a basic workflow that is manually triggered
-
 name: Publish Client
-
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
 on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'vrsion number'
+        description: 'version number'
         default: '1.0.0'
         required: true
         type: string
@@ -33,15 +28,10 @@ jobs:
       
     - name: push
       run: |
-        echo "working directory"
-        ls
-        echo "./bin"
-        ls bin
-        echo "./bin/Release"
-        ls ./bin/Release
-        dotnet nuget push ./bin/Release/BusinessCalendar.Client.${{inputs.version}}.nupkg --source https://nuget.pkg.github.com/myzamaraev/index.json --api-key ${GITHUB_TOKEN}
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        FILE_PATH="./bin/Release/BusinessCalendar.Client.${{inputs.version}}.nupkg";
+        dotnet nuget push $FILE_PATH --api-key "${{ secrets.NUGETORG_APIKEY }}" --source https://api.nuget.org/v3/index.json 
+#         --skip-duplicate     
+#        dotnet nuget push .nupkg --source https://nuget.pkg.github.com/myzamaraev/index.json --api-key ${{secrets.GITHUB_TOKEN}}
       working-directory: ./Src/BusinessCalendar.Client
 
       
