add cookie auth and login through OpenId connect, rearrange API endpoints moving  bff/v1 from  api/v1

--- a/Src/BusinessCalendar.WebAPI/BusinessCalendar.WebAPI.csproj
+++ b/Src/BusinessCalendar.WebAPI/BusinessCalendar.WebAPI.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="AspNetCore.HealthChecks.MongoDb" Version="7.0.0" />
     <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="7.1.0" />
     <PackageReference Include="Hellang.Middleware.ProblemDetails" Version="6.5.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.HealthChecks" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="7.0.10" />
@@ -29,6 +30,13 @@
     <Content Include="..\docker-compose.yml">
       <Link>docker-compose.yml</Link>
     </Content>
+    <Content Update="appsettings.Development.json">
+      <DependentUpon>appsettings.json</DependentUpon>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Middleware\" />
   </ItemGroup>
 
 </Project>
