--- a/Src/BusinessCalendar.WebAPI/appsettings.json
+++ b/Src/BusinessCalendar.WebAPI/appsettings.json
@@ -9,5 +9,14 @@
     "ConnectionURI": "mongodb://localhost:27018",
     "DatabaseName": "BusinessCalendar",
     "HealthTimeoutSeconds": 3
+  },
+  "Auth": {
+    "UseOpenIdConnectAuth": true,
+    "SessionCookieLifetimeMinutes": 60
+  },
+  "OpenIdConnect": {
+    "Authority": "http://localhost:4082/realms/business-calendar-demo",
+    "ClientId": "business-calendar",
+    "ClientSecret": "H2Wzx1NhB21NT85NNDsbGobuf9RpOAVe"
   }
 }
