--- a/Src/docker-compose.yml
+++ b/Src/docker-compose.yml
@@ -6,22 +6,26 @@ services:
     image: "ghcr.io/myzamaraev/businesscalendar:latest"
     environment:
       MongoDB__ConnectionURI: "mongodb://mongodb:27017"
-      OpenIdConnect__Authority: "keycloak:8080"
+      OpenIdConnect__Authority: "http://host.docker.internal:4082/realms/business-calendar-demo"
     ports:
       - "4081:80"
     depends_on:
       - mongodb
       - keycloak
         
-#  web-api:
-#    image: ${DOCKER_REGISTRY-}businesscalendar-webapi
-#    build:
-#      context: ..
-#      dockerfile: Dockerfile
-#    environment:
-#      MongoDB__ConnectionURI: "mongodb://mongodb:27017"
-#    ports:
-#      - 4080:80
+  web-api:
+    image: ${DOCKER_REGISTRY-}businesscalendar-webapi
+    build:
+      context: .
+      dockerfile: BusinessCalendar.WebAPI/Dockerfile
+    environment:
+      MongoDB__ConnectionURI: "mongodb://mongodb:27017"
+      OpenIdConnect__Authority: "http://host.docker.internal:4082/realms/business-calendar-demo"
+    ports:
+      - 4080:80
+    depends_on:
+      - mongodb
+      - keycloak
         
   mongodb:
     image: mongo:6.0.4
