enrich README with auth configuration details, refactor docker-compose

--- a/Src/BusinessCalendar.WebAPI/appsettings.Development.json
+++ b/Src/BusinessCalendar.WebAPI/appsettings.Development.json
@@ -8,5 +8,10 @@
 
   "Auth": {
     "UseOpenIdConnectAuth": true 
+  },
+  "OpenIdConnect": {
+    "Authority": "http://localhost:4082/realms/business-calendar-demo",
+    "ClientId": "business-calendar",
+    "ClientSecret": "H2Wzx1NhB21NT85NNDsbGobuf9RpOAVe"
   }
 }
