--- a/Src/BusinessCalendar.WebAPI/appsettings.json
+++ b/Src/BusinessCalendar.WebAPI/appsettings.json
@@ -11,12 +11,7 @@
     "HealthTimeoutSeconds": 3
   },
   "Auth": {
-    "UseOpenIdConnectAuth": true,
+    "UseOpenIdConnectAuth": false,
     "SessionCookieLifetimeMinutes": 60
-  },
-  "OpenIdConnect": {
-    "Authority": "http://localhost:4082/realms/business-calendar-demo",
-    "ClientId": "business-calendar",
-    "ClientSecret": "H2Wzx1NhB21NT85NNDsbGobuf9RpOAVe"
   }
 }
