--- a/Src/BusinessCalendar.WebAPI/BusinessCalendar.WebAPI.csproj
+++ b/Src/BusinessCalendar.WebAPI/BusinessCalendar.WebAPI.csproj
@@ -27,6 +27,9 @@
     <Content Include="..\.dockerignore">
       <Link>.dockerignore</Link>
     </Content>
+    <Content Include="..\.env">
+      <Link>.env</Link>
+    </Content>
     <Content Include="..\docker-compose.yml">
       <Link>docker-compose.yml</Link>
     </Content>
