--- a/Src/docker-compose.yml
+++ b/Src/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: "ghcr.io/myzamaraev/businesscalendar:latest"
     environment:
       MongoDB__ConnectionURI: "mongodb://mongodb:27017"
+      Auth__UseOpenIdConnectAuth: true
       OpenIdConnect__Authority: ${OpenIdConnect_Authority}
       OpenIdConnect__ClientId: ${OpenIdConnect_ClientId}
       OpenIdConnect__ClientSecret: ${OpenIdConnect_ClientSecret}
