--- a/Src/docker-compose.yml
+++ b/Src/docker-compose.yml
@@ -25,8 +25,9 @@ services:
 #      OpenIdConnect__Authority: ${OpenIdConnect_Authority}
 #      OpenIdConnect__ClientId: ${OpenIdConnect_ClientId}
 #      OpenIdConnect__ClientSecret: ${OpenIdConnect_ClientSecret}
+#      ASPNETCORE_ENVIRONMENT: Production
 #    ports:
-#      - 4081:80
+#      - "4081:80"
 #    depends_on:
 #      - mongodb
 #      - keycloak
