--- a/Src/BusinessCalendar.Client.Tests/BusinessCalendar.Client.Tests.csproj
+++ b/Src/BusinessCalendar.Client.Tests/BusinessCalendar.Client.Tests.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
     <PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
+    <PackageReference Include="Testcontainers.MongoDb" Version="3.5.0" />
   </ItemGroup>
 
   <ItemGroup>
