minor refactoring with code formating and annotations

--- a/Src/BusinessCalendar.Client/BusinessCalendar.Client.csproj
+++ b/Src/BusinessCalendar.Client/BusinessCalendar.Client.csproj
@@ -28,6 +28,7 @@
         <EmbedUntrackedSources>true</EmbedUntrackedSources>
         <EnablePackageValidation>true</EnablePackageValidation>
         <PackageValidationBaselineVersion>1.0.0</PackageValidationBaselineVersion>
+        <LangVersion>11</LangVersion>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
@@ -35,18 +36,18 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
     <ItemGroup>
-        <None Remove="**\*.orig"/>
+        <None Remove="**\*.orig" />
         <!--    <None Include="..\..\LICENSE.md" Pack="true" PackagePath="LICENSE.md" />-->
-        <None Include="PackageIcon.png" Pack="true" PackagePath="\"/>
+        <None Include="PackageIcon.png" Pack="true" PackagePath="\" />
         <None Include="README.md" Pack="true" PackagePath="\" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All"/>
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
     </ItemGroup>
 
 </Project>
