--- a/.github/workflows/publish_service.yml
+++ b/.github/workflows/publish_service.yml
@@ -15,10 +15,25 @@ jobs:
       uses: actions/checkout@v3.5.3
       with: 
         path: backend
-
+        
+        
+    - name: Run BusinessCalendar.Tests
+      run: dotnet test  "./Src/BusinessCalendar.sln" --logger "trx;LogFilePrefix=business-calendar-test-results.trx" --results-directory "TestResults"
+      working-directory: ./backend
+      
+    - name: Test Report
+      uses: dorny/test-reporter@v1
+      if: success() || failure() # run this step even if previous step failed
+      with:
+        name: BusinessCalendar Tests
+        working-directory: ./backend
+        path: ./TestResults/*.trx #path to test results
+        reporter: dotnet-trx
+          
+          
     - name: Checkout frontend
       uses: actions/checkout@v3.5.3
-      with: 
+      with:
         repository: 'myzamaraev/business-calendar.dashboard'
         ref: 'master'
         token: ${{ secrets.CHECKOUT_TOKEN }}
@@ -46,7 +61,8 @@ jobs:
       run: |
         rm ./backend/Src/BusinessCalendar.WebAPI/wwwroot/*
         cp -R ./frontend/dist/* ./backend/Src/BusinessCalendar.WebAPI/wwwroot
-      
+        
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
@@ -60,9 +76,9 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v4
       with:
-          context: ./backend/Src
-          file: ./backend/Src/BusinessCalendar.WebAPI/Dockerfile
-          push: true
-          tags: | 
-            ghcr.io/myzamaraev/businesscalendar:latest
-            ghcr.io/myzamaraev/businesscalendar:${{inputs.version}}
+        context: ./backend/Src
+        file: ./backend/Src/BusinessCalendar.WebAPI/Dockerfile
+        push: true
+        tags: |
+          ghcr.io/myzamaraev/businesscalendar:latest
+          ghcr.io/myzamaraev/businesscalendar:${{inputs.version}}
