--- a/Src/docker-compose.yml
+++ b/Src/docker-compose.yml
@@ -1,56 +1,25 @@
 version: "3.8"
 name: business-calendar
-services:
-  web-api-prod-image:
-    image: "ghcr.io/myzamaraev/businesscalendar:latest"
+services:   
+  web-api:
+    image: ${DOCKER_REGISTRY-}businesscalendar-webapi
+    build:
+      context: .
+      dockerfile: BusinessCalendar.WebAPI/Dockerfile
     environment:
       MongoDB__ConnectionURI: "mongodb://mongodb:27017"
-      Auth__UseOpenIdConnectAuth: true
-      OpenIdConnect__Authority: ${OpenIdConnect_Authority}
-      OpenIdConnect__ClientId: ${OpenIdConnect_ClientId}
-      OpenIdConnect__ClientSecret: ${OpenIdConnect_ClientSecret}
+      ASPNETCORE_ENVIRONMENT: Production
     ports:
       - "4080:80"
     depends_on:
       - mongodb
-      - keycloak
-        
-#  web-api:
-#    image: ${DOCKER_REGISTRY-}businesscalendar-webapi
-#    build:
-#      context: .
-#      dockerfile: BusinessCalendar.WebAPI/Dockerfile
-#    environment:
-#      MongoDB__ConnectionURI: "mongodb://mongodb:27017"
-#      OpenIdConnect__Authority: ${OpenIdConnect_Authority}
-#      OpenIdConnect__ClientId: ${OpenIdConnect_ClientId}
-#      OpenIdConnect__ClientSecret: ${OpenIdConnect_ClientSecret}
-#      ASPNETCORE_ENVIRONMENT: Production
-#    ports:
-#      - "4081:80"
-#    depends_on:
-#      - mongodb
-#      - keycloak
         
   mongodb:
     image: mongo:6.0.4
     ports:
-      - "27018:27017"
+      - "4081:27017"
     volumes:
-      - mongo:/data/db
-        
-  keycloak:
-    image: quay.io/keycloak/keycloak:22.0.1
-    ports:
-      - "4082:8080"
-    environment:
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
-    command:
-      - start-dev      
-      - --import-realm
-    volumes:
-      - ./Keycloak/business-calendar-demo-realm.json:/opt/keycloak/data/import/business-calendar-demo-realm.json
+      - mongo:/data/db 
         
 volumes:
   mongo:
