--- a/Src/BusinessCalendar.WebAPI/appsettings.json
+++ b/Src/BusinessCalendar.WebAPI/appsettings.json
@@ -5,10 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "MongoDB": {
-    "ConnectionURI": "mongodb://localhost:27018",
-    "DatabaseName": "BusinessCalendar",
-    "HealthTimeoutSeconds": 3
+  "Storage": {
+    "DatabaseType": "Postgres",
+    "HealthTimeoutSeconds": 3,
+    "AllowAutoMigrations": true
   },
   "Auth": {
     "UseOpenIdConnectAuth": false,
