--- a/Src/Storage/BusinessCalendar.MongoDb/BusinessCalendar.MongoDb.csproj
+++ b/Src/Storage/BusinessCalendar.MongoDb/BusinessCalendar.MongoDb.csproj
@@ -1,10 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\BusinessCalendar.Domain\BusinessCalendar.Domain.csproj" />
+    <ProjectReference Include="..\..\BusinessCalendar.Domain\BusinessCalendar.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.MongoDb" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
