--- a/Src/BusinessCalendar.WebAPI/BusinessCalendar.WebAPI.csproj
+++ b/Src/BusinessCalendar.WebAPI/BusinessCalendar.WebAPI.csproj
@@ -21,7 +21,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BusinessCalendar.Domain\BusinessCalendar.Domain.csproj" />
-    <ProjectReference Include="..\BusinessCalendar.MongoDb\BusinessCalendar.MongoDb.csproj" />
+    <ProjectReference Include="..\Storage\BusinessCalendar.MongoDb\BusinessCalendar.MongoDb.csproj" />
+    <ProjectReference Include="..\Storage\BusinessCalendar.Postgres\BusinessCalendar.Postgres.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,9 +31,6 @@
     </Content>
     <Content Include="..\.env">
       <Link>.env</Link>
-    </Content>
-    <Content Include="..\docker-compose.yml">
-      <Link>docker-compose.yml</Link>
     </Content>
     <Content Update="appsettings.Development.json">
       <DependentUpon>appsettings.json</DependentUpon>
