add logging, apply some refactoring to provide more accurate info

--- a/Src/BusinessCalendar.Domain/BusinessCalendar.Domain.csproj
+++ b/Src/BusinessCalendar.Domain/BusinessCalendar.Domain.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.6.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
