--- a/Src/BusinessCalendar.Tests/BusinessCalendar.Tests.csproj
+++ b/Src/BusinessCalendar.Tests/BusinessCalendar.Tests.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
         <PackageReference Include="Moq" Version="4.20.69" />
         <PackageReference Include="NUnit" Version="3.13.3" />
